# serializer version: 1
# name: test_get_v1_trades_latest
  list([
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 24, 667333, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 24, 707188, tzinfo=datetime.timezone.utc), uuid='bbd51db9-d0af-4ff1-909f-fd8b2aa56272', price=67088.3, size=0.002, taker_side='SELL', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_ETH_USDT', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 23, 961974, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 23, 905651, tzinfo=datetime.timezone.utc), uuid='f2a13c82-4bc5-4264-b9cf-3a1805a84874', price=3858.6, size=0.5, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 23, 546915, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 23, 490293, tzinfo=datetime.timezone.utc), uuid='3e54b27a-d1ac-447b-9e84-15d68d7af4b7', price=67069.8, size=0.00155758, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 21, 966897, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 21, 912520, tzinfo=datetime.timezone.utc), uuid='74bcf9b8-adbb-42b4-b9c1-9e6e8e527ca2', price=67075.0, size=0.00193724, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_ETH_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 20, 72412, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 20, 15372, tzinfo=datetime.timezone.utc), uuid='aeab41b1-e4d5-4de1-b1db-c1a4ff63e5a5', price=3868.61, size=0.04846702, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 19, 898682, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 19, 841297, tzinfo=datetime.timezone.utc), uuid='1d41f10d-e595-4f67-af9c-751f68a8349d', price=67094.5, size=0.01375674, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_ETH_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 19, 467109, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 19, 406326, tzinfo=datetime.timezone.utc), uuid='bebf3041-d968-4471-aa0f-62df7042bb04', price=3868.61, size=0.00904717, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_ETH_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 17, 830938, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 17, 775935, tzinfo=datetime.timezone.utc), uuid='81740437-6145-430b-977f-d49519f21b52', price=3868.6, size=0.01, taker_side='SELL', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USDC', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 16, 446678, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 16, 390933, tzinfo=datetime.timezone.utc), uuid='ad3a764b-429c-45c0-aaf5-a3b7bbdec9e3', price=67077.76, size=0.00734322, taker_side='SELL', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 15, 378383, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 15, 319344, tzinfo=datetime.timezone.utc), uuid='e0db6288-7dc6-4f00-bc0f-fad7800abe15', price=67094.4, size=6.276e-05, taker_side='SELL', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
  ])
# ---
# name: test_get_v1_trades_symbol_id_history
  list([
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 1, 151000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 1, 263989, tzinfo=datetime.timezone.utc), uuid='d00a4a46-e9f7-42d2-88a2-9d81d0282f72', price=46150.0, size=0.05, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 1, 769000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 1, 884184, tzinfo=datetime.timezone.utc), uuid='7594bab3-791f-4da1-9133-c10da7204aca', price=46150.0, size=0.00268, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 1, 896000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 2, 9392, tzinfo=datetime.timezone.utc), uuid='b46ee35a-9f3b-4383-8f32-ac8143ce817f', price=46150.0, size=0.00500541, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 2, 914000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 3, 37176, tzinfo=datetime.timezone.utc), uuid='2f5c2a21-8604-4305-af33-df20457b4de0', price=46150.0, size=0.00376624, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 3, 965000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 4, 78624, tzinfo=datetime.timezone.utc), uuid='d6994030-362e-4bf2-8ac5-d3fcee5def7f', price=46150.0, size=0.00174919, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 6, 642000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 6, 755281, tzinfo=datetime.timezone.utc), uuid='a82b1f62-dbc8-49da-b379-6e40b2c0461f', price=46150.0, size=0.00015127, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 8, 241000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 8, 356872, tzinfo=datetime.timezone.utc), uuid='da48580a-cf29-4760-a720-c6cb9c611010', price=46150.0, size=0.064, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 8, 244000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 8, 359714, tzinfo=datetime.timezone.utc), uuid='733483c5-3b71-4fe5-861a-2d654bfa6e3f', price=46150.0, size=0.062, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 8, 267000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 8, 381261, tzinfo=datetime.timezone.utc), uuid='9194397b-4d37-4e10-adf4-bde24691c995', price=46150.0, size=0.09306775, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2022, 1, 1, 0, 0, 8, 279000, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2022, 1, 1, 0, 0, 8, 398250, tzinfo=datetime.timezone.utc), uuid='2e8aaf08-1176-479f-859f-8e32e9fdba50', price=46150.0, size=0.04367, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
  ])
# ---
# name: test_get_v1_trades_symbol_id_latest
  list([
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 23, 546915, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 23, 490293, tzinfo=datetime.timezone.utc), uuid='3e54b27a-d1ac-447b-9e84-15d68d7af4b7', price=67069.8, size=0.00155758, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 21, 966897, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 21, 912520, tzinfo=datetime.timezone.utc), uuid='74bcf9b8-adbb-42b4-b9c1-9e6e8e527ca2', price=67075.0, size=0.00193724, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 19, 898682, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 19, 841297, tzinfo=datetime.timezone.utc), uuid='1d41f10d-e595-4f67-af9c-751f68a8349d', price=67094.5, size=0.01375674, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 15, 378383, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 15, 319344, tzinfo=datetime.timezone.utc), uuid='e0db6288-7dc6-4f00-bc0f-fad7800abe15', price=67094.4, size=6.276e-05, taker_side='SELL', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 4, 132549, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 4, 85993, tzinfo=datetime.timezone.utc), uuid='0642d094-32a3-478a-a07e-304ed334810d', price=67097.7, size=0.04782482, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 4, 132549, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 4, 85993, tzinfo=datetime.timezone.utc), uuid='4d703afc-3aaa-4383-a27e-be32f6374fab', price=67093.5, size=0.0155393, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 4, 132549, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 4, 85993, tzinfo=datetime.timezone.utc), uuid='8ec5d13c-89a6-474a-bdeb-2a585f93afb8', price=67084.1, size=0.00071, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 4, 132549, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 4, 85993, tzinfo=datetime.timezone.utc), uuid='8465ef74-81e8-4079-a44b-726bd67d5a07', price=67084.1, size=0.00022682, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 2, 937290, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 2, 964944, tzinfo=datetime.timezone.utc), uuid='da1bf51b-027f-4d3e-b516-5584cd373c05', price=67084.1, size=0.00077318, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
    V1Trade(symbol_id='KRAKEN_SPOT_BTC_USD', time_exchange=datetime.datetime(2024, 3, 6, 20, 46, 0, 420002, tzinfo=datetime.timezone.utc), time_coinapi=datetime.datetime(2024, 3, 6, 20, 46, 0, 366835, tzinfo=datetime.timezone.utc), uuid='a8d22d50-c072-4c0a-bc09-407128d20a80', price=67084.1, size=0.00581882, taker_side='BUY', id_trade=UNSET, id_order_maker=UNSET, id_order_taker=UNSET),
  ])
# ---
